# alans-guitars

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260522_0000_initial_schema.py  20260523_0100_notified_listings.py  20260523_0200_shop_discovery_columns.py  20260523_0300_outreach_tables.py
docs/: ARCHITECTURE.md  RUNBOOK.md  STATUS.md
src/guitar_searcher/: __init__.py  config.py  search_runner.py  watch_runner.py
src/guitar_searcher/cli/: __init__.py  main.py  outreach.py  search.py  shops.py  watch.py
src/guitar_searcher/db/: __init__.py  seed.py  session.py
src/guitar_searcher/discovery/: __init__.py  dedupe.py  osm.py  reverb_directory.py
src/guitar_searcher/llm/: __init__.py  client.py
src/guitar_searcher/matching/: __init__.py  fingerprint.py  llm_tiebreaker.py  normalize.py  score.py
src/guitar_searcher/models/: __init__.py  base.py  listing.py  notifications.py  outreach.py  shop.py
src/guitar_searcher/notifications/: __init__.py  email_digest.py
src/guitar_searcher/outreach/: __init__.py  classifier.py  compliance.py  composer.py  inbox.py  queue.py  sender.py
src/guitar_searcher/scheduler/: __init__.py  runner.py
src/guitar_searcher/schemas/: __init__.py  listing.py  query.py  shop.py
src/guitar_searcher/scrapers/: __init__.py  _html_search.py  base.py  carter_vintage.py  elderly.py  registry.py  reverb_api.py  shopify_generic.py  sweetwater.py  wildwood.py
src/guitar_searcher/utils/: logging.py  ratelimit.py
tests/: conftest.py
tests/integration/: test_shopify_scraper.py
tests/unit/: test_classifier.py  test_compliance.py  test_composer.py  test_dedupe.py  test_discovery_parsers.py  test_email_digest.py  test_fingerprint.py  test_html_search.py  test_normalize.py  test_outreach_queue.py  test_query_spec.py  test_score.py  test_scraper_registry.py  test_seed.py  test_sender_gates.py  test_watch_runner.py
(+1 files in other folders)
