[project]
name = "guitar-searcher"
version = "0.1.0"
description = "Hunt for specific guitars across major US retailers and (eventually) every guitar shop in the US."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Brent Scott" }]
license = { text = "MIT" }

dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "selectolax>=0.3.21",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13.7",
    "anyio>=4.4",
    "aiolimiter>=1.1",
    "rapidfuzz>=3.9",
    "anthropic>=0.40",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
browser = ["playwright>=1.46", "playwright-stealth>=1.0.6"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "vcrpy>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
guitar-searcher = "guitar_searcher.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guitar_searcher"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/guitar_searcher/cli/*.py" = ["B008"]  # typer.Option in defaults is idiomatic
"tests/**/*.py" = ["E741"]  # `l` is fine in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["selectolax.*", "vcr.*", "playwright_stealth.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
